...
    };

    return (
        <>
            <Item>
              <Controller
                as={<Input testID="login-username-input" placeholder="Username" />}
                control={control}
                name="username"
                onChange={onChange}
                rules={{ required: true }}
              />
              {errors.username && <Text>This is required.</Text>}
            </Item>
            <Item>
            <Controller
                as={<Input testID="login-password-input" placeholder="Password" />}
                control={control}
                name="password"
                onChange={onChange}
                rules={{ required: true }}
              />
              {errors.password && <Text>This is required.</Text>}
            </Item>
            <Button testID="login-send-button" style={DefaultTheme.backgroundColorPrimaryColor} onPress={send}>
                <Text>Login</Text>
            </Button>
          </>
    );

}
...
