...
import { DefaultTheme } from '../theme';
import { SafeAreaView, Dimensions } from 'react-native';
import { RecyclerListView, DataProvider, LayoutProvider } from "recyclerlistview";

const NoOfferings = Wrapper(() => {
  return (
    <Grid testID="no-offering-found" style={{ alignItems: 'center' }}>
      <Col>
        <Icon name='alert' style={[{ textAlign: 'center', fontSize: 60 }, DefaultTheme.secondaryColor]} />
        <H1 style={{ textAlign: 'center' }}>No offerings found!</H1>
      </Col>
    </Grid>
  );
...
