...
            <Left>
                <Button testID="side-menu-button" style={DefaultTheme.backgroundColorPrimaryColor} transparent onPress={() => toggleDrawer()}>
                    <Icon name='menu' />
                </Button>
            </Left>
            <Right>
                <Button testID="search-button" style={DefaultTheme.backgroundColorPrimaryColor} transparent onPress={() => setIsSearching(true)}>
                    <Icon name='search' />
                </Button>
            </Right>
        </>
    );
}

export type FabProps = { navigate: (r: string) => void }
export const FabComponent: React.FunctionComponent<FabProps> = ({ navigate }) => {
    return (
        <Fab
            testID="fab-button"
            active={true}
            direction="up"
            containerStyle={{}}
            style={DefaultTheme.backgroundSecondaryColor}
            position="bottomRight"
            onPress={() => { navigate('CreateOffering') }}>
...
